--- a/tools/styles/tokens/express/custom-dark-vars.css
+++ b/tools/styles/tokens/express/custom-dark-vars.css
@@ -11,7 +11,7 @@ governing permissions and limitations under the License.
 
 /* This file contains overrides and additions to core tokens */
 
-.spectrum--express:host,
+:host,
 :root {
     /* */
 }
