--- a/packages/thumbnail/src/spectrum-thumbnail.css
+++ b/packages/thumbnail/src/spectrum-thumbnail.css
@@ -308,16 +308,16 @@ governing permissions and limitations under the License.
     );
     position: absolute;
 }
-:host(.focus-visible) .spectrum-Thumbnail-image-wrapper,
-:host([focused]) .spectrum-Thumbnail-image-wrapper {
+:host(.focus-visible) .image-wrapper,
+:host([focused]) .image-wrapper {
     border-radius: var(
         --mod-thumbnail-border-radius,
         var(--spectrum-thumbnail-border-radius)
     );
     overflow: hidden;
 }
-:host(:focus-visible) .spectrum-Thumbnail-image-wrapper,
-:host([focused]) .spectrum-Thumbnail-image-wrapper {
+:host(:focus-visible) .image-wrapper,
+:host([focused]) .image-wrapper {
     border-radius: var(
         --mod-thumbnail-border-radius,
         var(--spectrum-thumbnail-border-radius)
@@ -399,20 +399,20 @@ governing permissions and limitations under the License.
             )
     );
 }
-.spectrum-Thumbnail-image-wrapper {
+.image-wrapper {
     align-items: center;
     block-size: 100%;
     display: flex;
     inline-size: 100%;
     justify-content: center;
 }
-::slotted(*) {
+.image {
     max-block-size: 100%;
     max-inline-size: 100%;
     position: relative;
     z-index: 1;
 }
-:host([cover]) ::slotted(*) {
+:host([cover]) .image {
     block-size: 100%;
     inline-size: 100%;
     object-fit: cover;
